# WebAssembly-Rust

./: README.md
convoys-game-of-life/: RULES.md
convoys-game-of-life/game-of-life/: Cargo.toml  LICENSE_MIT  README.md
convoys-game-of-life/game-of-life/src/: lib.rs
convoys-game-of-life/game-of-life/www/: index.html  index.js  package-lock.json
game-of-life/: Cargo.toml
game-of-life/src/: lib.rs
game-of-life/tests/: web.rs
game-of-life/www/: index.html  index.js  package.json  webpack.config.js
mdn_docs/: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  server.js
mdn_docs/demo/: index.html  index.js  package-lock.json  package.json
mdn_docs/src/: lib.rs
