[package]
name = "mdn_docs"
version = "0.1.0"
authors = ["HrushiBorhade <hrushiborhade123@gmail.com>"]
description = "A demo project with wasm-pack"
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://github.com:HrushiBorhade/WebAssembly-Rust"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
